[gd_scene load_steps=5 format=3 uid="uid://bb16gmxa6ap67"]

[ext_resource type="Script" uid="uid://cch7bn437qvgg" path="res://scripts/shop/shop_relic.gd" id="1_fweq6"]
[ext_resource type="PackedScene" uid="uid://bxhr3gnnp3euv" path="res://scenes/relic_handler/relic_ui.tscn" id="1_s65cj"]
[ext_resource type="Resource" uid="uid://b22y5p0tp7wf" path="res://relics/explosive_barrel.tres" id="2_vuhns"]
[ext_resource type="Texture2D" uid="uid://b3lkwdox71lxu" path="res://art/gold.png" id="4_6ruh8"]

[node name="ShopRelic" type="VBoxContainer"]
custom_minimum_size = Vector2(40, 42)
offset_right = 40.0
offset_bottom = 42.0
theme_override_constants/separation = 2
script = ExtResource("1_fweq6")
relic = ExtResource("2_vuhns")

[node name="RelicContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="RelicUI" parent="RelicContainer" instance=ExtResource("1_s65cj")]
layout_mode = 2

[node name="PriceHBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="PriceLabel" type="Label" parent="PriceHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "999"

[node name="GoldIcon" type="TextureRect" parent="PriceHBox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("4_6ruh8")
expand_mode = 1
stretch_mode = 5

[node name="BuyButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
text = "Buy"

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
